fix form label cadastro

--- a/app/views/spree/shared/_guest_subscription_form1.html.erb
+++ b/app/views/spree/shared/_guest_subscription_form1.html.erb
@@ -14,13 +14,13 @@
 
  	<p class="radio_field">
  		<%= f.radio_button :profile, "Me Interessa Comprar e Vender" %>
- 		<%= f.label :profile_me_interessa_comprar_e_vender %>
+ 		<%= f.label :profile_me_interessa_comprar_e_vender, "Me Interessa Comprar e Vender" %>
 
  		<%= f.radio_button :profile, "Me Interessa Apenas Comprar" %>
- 		<%= f.label :profile_me_interessa_apenas_comprar %>
+ 		<%= f.label :profile_me_interessa_apenas_comprar, "Me Interessa Apenas Comprar" %>
 
  		<%= f.radio_button :profile, "Me Interessa Apenas Vender" %>
- 		<%= f.label :profile_me_interessa_apenas_vender %>
+ 		<%= f.label :profile_me_interessa_apenas_vender, "Me Interessa Apenas Vender" %>
 	</p>
 
 	<p class="checkbox_field">
